Stable versions
---------------

4.6.1 (?):
	Changes by Alice Rowan:
	- Fix loop detection edge cases broken by S3M/IT marker scan bugs.

4.6.0 (20230615):
	Changes by Alice Rowan:
	- Add Astroidea XMF format loader.
	- Implement S3M and IT mix volume.
	- Add IT MIDI macro filter effects support.
	- Fix for IT filter cutoff 127 on new note behavior.
	- Add missing IT filter clamp to mixer loops.
	- Fix IT duplicate note check to use the key prior to transpose.
	- Fix multiple IT playback bugs affecting, e.g. Atomic Playboy.
	- Fix IT tone portamento and offset.
	- Fix reverse sustain loop release bug, add IT effect S9F support.
	- Add Modplug ADPCM4 support for Impulse Tracker modules.
	- Improve anticlick performance and fix anticlick filter volume bug.
	- IT fade envelope reset should only affect volume envelope.
	- Fix Impulse Tracker envelope and fadeout order.
	- Replace bidirectional loop unrolling with reverse sample rendering.
	- Fix crash when xmp_set_row() is used on an IT end marker.
	- Fix NNA and tone portamento interaction with sample changes.
	- Add compatibility for Modplug Tracker preamp scaling.
	- Add tracker detection for ModPlug Tracker XMs, pre-alpha ITs.
	- New Protracker CIA and VBlank timing detection routine.
	- Fix detection for TakeTracker TDZx MODs.
	- Fix loading of Digital Tracker FA0x MODs.
	- Fix ASYLUM Music Format restart byte.
	- Fix >1MB S3M modules relying on the sample segment high byte.
	- New MIT-licensed Digital Symphony LZW decoder.
	- Add support for Digital Symphony sigma-delta samples.
	- Fix Digital Symphony effects and pattern loading issues.
	- Fix support for most Farandole Composer effects.
	- Implement Ultra Tracker tone portamento.
	- Multiple OctaMED fixes and support for MMDC packed modules.
	- Fix MED Soundstudio 2 default note events.
	- Fix MTM tempo effect and FX_SPEED scan bugs.
	- Add MTM module tempo mode detection and comments support.
	- Multiple fixes and updates for ST modules.