@@ -190,7 +190,9 @@ struct it_sample_header {
 	uint8 vit;		/* Vibrato waveform */
 };
 
-int itsex_decompress8(HIO_HANDLE *src, uint8 *dst, int len, int it215);
-int itsex_decompress16(HIO_HANDLE *src, int16 *dst, int len, int it215);
+int itsex_decompress8(HIO_HANDLE *src, uint8 *dst, int len,
+		      uint8 *tmp, int tmplen, int it215);
+int itsex_decompress16(HIO_HANDLE *src, int16 *dst, int len,
+		       uint8 *tmp, int tmplen, int it215);
 
 #endif /* LIBXMP_LOADERS_IT_H */
